// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Badge should be able to render with an icon 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  height: 0.75rem;
  width: 0.75rem;
}

.c2:hover {
  border: 0.125rem solid #CC3B3B;
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

<div
  className="c0 anchor-badge"
>
  <span
    className="c1 anchor-icon cart"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <g
          fill="currentColor"
          fillRule="nonzero"
        >
          <path
            d="M6.889 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM11.331 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM4.216 2.681h9.71a.874.874 0 0 1 .853 1.064L13.626 8.93a.874.874 0 0 1-.854.685h-7.49l.187 1.215h7.346a.504.504 0 1 1 0 1.007H5.037a.504.504 0 0 1-.498-.427L3.123 2.207h-1.42a.504.504 0 1 1 0-1.007h1.853c.248 0 .46.181.497.427l.163 1.054zm.913 5.926h7.537l1.093-4.918H4.372l.757 4.918z"
          />
        </g>
      </g>
    </svg>
  </span>
  <div
    className="c2 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should be defined and match its snapshot 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  height: 0.75rem;
  width: 0.75rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should hide the count by default if \`count\` is 0 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 0.4rem;
  display: none;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  font-size: 0.625rem;
  height: 1.25rem;
  min-width: 1.25rem;
  padding: 0 0.25rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="small"
  >
    0
  </div>
</div>
`;

exports[`Component: Badge should render \`count\` if \`count\` is less than \`overflowCount\` 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  font-size: 0.75rem;
  height: 1.75rem;
  min-width: 1.75rem;
  padding: 0 0.5rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="large"
  >
    3
  </div>
</div>
`;

exports[`Component: Badge should render \`overflowCount\`+ if \`count\` is more than \`overflowCount\` 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  font-size: 0.75rem;
  height: 1.75rem;
  min-width: 1.75rem;
  padding: 0 0.5rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="large"
  >
    6+
  </div>
</div>
`;

exports[`Component: Badge should render a count with the border color of \`borderColorHover\` if \`isParentHovered\` is true. 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid palevioletred;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  height: 0.75rem;
  width: 0.75rem;
}

.c1:hover {
  border: 0.125rem solid palevioletred;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should render a dot as the default \`size\` 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  height: 0.75rem;
  width: 0.75rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should render a double-digit count in a small badge with fully rounded border-radius 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 1.1rem;
  left: 0.6rem;
  font-size: 0.625rem;
  height: 1.25rem;
  min-width: 1.25rem;
  padding: 0 0.25rem;
}

.c2:hover {
  border: 0.125rem solid #CC3B3B;
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

<div
  className="c0 anchor-badge"
>
  <span
    className="c1 anchor-icon cart"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <g
          fill="currentColor"
          fillRule="nonzero"
        >
          <path
            d="M6.889 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM11.331 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM4.216 2.681h9.71a.874.874 0 0 1 .853 1.064L13.626 8.93a.874.874 0 0 1-.854.685h-7.49l.187 1.215h7.346a.504.504 0 1 1 0 1.007H5.037a.504.504 0 0 1-.498-.427L3.123 2.207h-1.42a.504.504 0 1 1 0-1.007h1.853c.248 0 .46.181.497.427l.163 1.054zm.913 5.926h7.537l1.093-4.918H4.372l.757 4.918z"
          />
        </g>
      </g>
    </svg>
  </span>
  <div
    className="c2 anchor-badge-count"
    size="small"
  >
    9+
  </div>
</div>
`;

exports[`Component: Badge should render a single-digit count in a large badge with fully rounded border-radius 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 1.1rem;
  left: 0.6rem;
  font-size: 0.75rem;
  height: 1.75rem;
  min-width: 1.75rem;
  padding: 0 0.5rem;
}

.c2:hover {
  border: 0.125rem solid #CC3B3B;
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

<div
  className="c0 anchor-badge"
>
  <span
    className="c1 anchor-icon cart"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <g
          fill="currentColor"
          fillRule="nonzero"
        >
          <path
            d="M6.889 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM11.331 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM4.216 2.681h9.71a.874.874 0 0 1 .853 1.064L13.626 8.93a.874.874 0 0 1-.854.685h-7.49l.187 1.215h7.346a.504.504 0 1 1 0 1.007H5.037a.504.504 0 0 1-.498-.427L3.123 2.207h-1.42a.504.504 0 1 1 0-1.007h1.853c.248 0 .46.181.497.427l.163 1.054zm.913 5.926h7.537l1.093-4.918H4.372l.757 4.918z"
          />
        </g>
      </g>
    </svg>
  </span>
  <div
    className="c2 anchor-badge-count"
    size="large"
  >
    2
  </div>
</div>
`;

exports[`Component: Badge should render a single-digit count in a small badge with only partially rounded border-radius 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 0.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 1.1rem;
  left: 0.6rem;
  font-size: 0.625rem;
  height: 1.25rem;
  min-width: 1.25rem;
  padding: 0 0.25rem;
}

.c2:hover {
  border: 0.125rem solid #CC3B3B;
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

<div
  className="c0 anchor-badge"
>
  <span
    className="c1 anchor-icon cart"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <g
          fill="currentColor"
          fillRule="nonzero"
        >
          <path
            d="M6.889 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM11.331 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM4.216 2.681h9.71a.874.874 0 0 1 .853 1.064L13.626 8.93a.874.874 0 0 1-.854.685h-7.49l.187 1.215h7.346a.504.504 0 1 1 0 1.007H5.037a.504.504 0 0 1-.498-.427L3.123 2.207h-1.42a.504.504 0 1 1 0-1.007h1.853c.248 0 .46.181.497.427l.163 1.054zm.913 5.926h7.537l1.093-4.918H4.372l.757 4.918z"
          />
        </g>
      </g>
    </svg>
  </span>
  <div
    className="c2 anchor-badge-count"
    size="small"
  >
    5
  </div>
</div>
`;

exports[`Component: Badge should render the count with absolute positioning if \`standalone\` is false 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 1.2rem;
  left: 0.9rem;
  height: 0.75rem;
  width: 0.75rem;
}

.c2:hover {
  border: 0.125rem solid #CC3B3B;
}

.c1 {
  display: inline-block;
  height: 1.5rem;
  width: 1.5rem;
  line-height: 0;
  color: currentColor;
}

<div
  className="c0 anchor-badge"
>
  <span
    className="c1 anchor-icon cart"
    scale="lg"
  >
    <svg
      height={24}
      viewBox="0 0 16 16"
      width={24}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <g
          fill="currentColor"
          fillRule="nonzero"
        >
          <path
            d="M6.889 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM11.331 14.667a1.111 1.111 0 1 1 0-2.223 1.111 1.111 0 0 1 0 2.223zM4.216 2.681h9.71a.874.874 0 0 1 .853 1.064L13.626 8.93a.874.874 0 0 1-.854.685h-7.49l.187 1.215h7.346a.504.504 0 1 1 0 1.007H5.037a.504.504 0 0 1-.498-.427L3.123 2.207h-1.42a.504.504 0 1 1 0-1.007h1.853c.248 0 .46.181.497.427l.163 1.054zm.913 5.926h7.537l1.093-4.918H4.372l.757 4.918z"
          />
        </g>
      </g>
    </svg>
  </span>
  <div
    className="c2 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should render the count without absolute positioning if \`standalone\` is true 1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  width: 0.75rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="dot"
  >
    
  </div>
</div>
`;

exports[`Component: Badge should show the count if \`showZero\` is true, even if \`count\` is 0  1`] = `
.c0 {
  position: relative;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  display: inline-block;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CC3B3B;
  color: white;
  border: 0.125rem solid #CC3B3B;
  box-sizing: border-box;
  font-weight: 700;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  border-radius: 0.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: undefinedrem;
  left: undefinedrem;
  font-size: 0.625rem;
  height: 1.25rem;
  min-width: 1.25rem;
  padding: 0 0.25rem;
}

.c1:hover {
  border: 0.125rem solid #CC3B3B;
}

<div
  className="c0 anchor-badge"
>
  <div
    className="c1 anchor-badge-count"
    size="small"
  >
    0
  </div>
</div>
`;
